--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -1,4 +1,11 @@
 body {
+  width: 400px;
+}
+
+.header {
+  border-bottom: rgba(215,215,215,1) 2px solid;
+}
+
+.content {
   padding: 20px;
-  width: 300px;
 }
